test/configCases/errors/asset-options-validation/index.js
import url from "./text.txt";
